--- a/index.html
+++ b/index.html
@@ -12,55 +12,50 @@
 
   <header class="header" style="max-width:100%">
     <div>
-      <div class="topnav">
-        <a href="#">Home</a>
-        <a href="./About_LK.html">About</a>
-      </div>  
-    <h1 class="large-text">Project Gallery</h1>
+    <h1 class="large-text">PROJECT GALLERY</h1>
     </div>
     </header>
 
-  <br>
+  <br> <br>
 <!-- !PAGE CONTENT! -->
 
 <div class="container">
   <ul class="image-gallery">
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
-      <h3>TRIBUTE TO GLASGOW</h3>
+      <img src="./images/glasgow.jpg" alt="Tribute">
       <br>
-      <a href="https://laurak0.github.io/Tribute-Page/" class="button1">CLICK HERE</a>
+      <a href="https://laurak0.github.io/Tribute-Page/" class="button">TRIBUTE TO GLASGOW</a>
     </li>
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
+      <img src="./images/gallery.jpeg" alt="Project-Gallery">
+      <br>
+      <a href="https://laurak0.github.io/Project-Gallery/" class="button">PROJECT GALLERY</a>
     </li>
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
+      <img src="./images/comments.jpeg" alt="Comment-Box">
+      <br>
+      <a href="https://laurak0.github.io/Comment-Box/" class="button">COMMENT BOX</a>
     </li>
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
-      <p>text</p>
+      <img src="./images/apples.jpeg" alt="Fruit-Shop">
+      <br>
+      <a href="https://laurak0.github.io/Fruit-Basket/" class="button">FRUIT SHOP</a>
     </li>
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
+      <img src="./images/stage-5-render.jpg" alt="Website">
+      <br>
+      <a href="https://laurak0.github.io/Website/" class="button">WEBSITE</a>
     </li>
     <li>
-      <img src="./images/glasgow.jpg" alt="Glasgow">
+      <img src="./images/connect-four.jpg" alt="Feature">
+      <br>
+      <a href="https://laurak0.github.io/Feature/" class="button">FEATURE</a>
     </li>
   </ul>
 </div>
 
-  <!-- Footer -->
-  <footer class="">
-    <div class="">
-      <h3>FOOTER</h3>
-      <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
-    </div>
-
-  </footer>
 
 <!-- End page content -->
-</div>
 
 </body>
 </html>
